# HPP_Herkansing

./: .gitignore  Array sum.ipynb  Bucket sort.ipynb  Circuit.ipynb  Julia Set.ipynb  MODULE.bazel  Merge sort.ipynb  README.TXT  WORKSPACE.bazel  bazel-HPP  bazel-bin  bazel-out  bazel-testlogs  bucket_sort.csv
1: Bucket Sort/: bucket_sort.py
Python/: bucket_sort_2.py
circuit/: circuitSatisfiability  circuitSatisfiability.cpp  circuitSatisfiability_par  circuitSatisfiability_par.cpp  parallelLoopSlices
code/: BUILD.bazel  bucket_sort.cpp  bucket_sort.hpp  merge_sort.cpp  merge_sort.hpp  merge_sort_threaded.cpp  merge_sort_threaded.hpp  test.cpp
fractal/: mandel  mandel.cpp  mandel_original.cpp  par
hpp-rust/: Cargo.toml
hpp-rust/src/: bucket_sort.rs  main.rs
open_MP/: 100k  10k  arraySum.cpp  arraySum_OP  arraySum_OP.cpp
results/: bucket_sort_time.csv  time_merge.csv  time_merge_thread.csv
results/circuit/: circuit_results.csv
results/fractal/: results_1P_2t.csv  results_1P_4t.csv  results_1P_8t.csv
